# EV-Fleet-Simulator

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOGS.md  LICENSE  README.md  TODO.md  build_and_upload.sh  dependencies.md  index.html  setup.cfg
data_processing_ev/: README.md  __init__.py
data_processing_ev/data_visualisation/: __init__.py  animation.py  mapping.py
data_processing_ev/ev_simulation/: [deprecated]_charge_monitor_traffic.py  ev_simulation.py
data_processing_ev/results_analysis/: [deprecated]_data_analysis_new.py  [deprecated]_trash_output_dir.sh  results_analysis.py
data_processing_ev/results_analysis/__dirty/: dirty__stop_duration_box_plots.py  dirty__time_clustering_with_dates.py  dirty_box_plots.py  dirty_charging_potential.py  instructions.md
data_processing_ev/routing/: [deprecated]_charge_monitor.py
data_processing_ev/scenario_initialisation/: readme.md  scenario_initialisation.py
data_processing_ev/scenario_initialisation/Data_Pre-Processing/: Kampala_UTX.py
data_processing_ev/scenario_initialisation/Initialisation_Files/: custom_osm_test.template.sumocfg  ev_template.xml
data_processing_ev/scenario_initialisation/Map_Construction/: pbf_to_osm.sh
data_processing_ev/spatial_clustering/: instructions_reducing_traces.md  spatial_clustering.py  spatial_filtering.py
data_processing_ev/temporal_clustering/: export_to_png.sh
docs/: Gemfile  _config.yml  blog.html  contact.md  index.md  publications.md  rss.md
docs/_archive/: 2023-07-24-job-ad.md
docs/_authors/: chris.md  johan.md  larissa.md  mike.md  rix.md  thinus.md
docs/_data/: docs.yml  navigation.yml
docs/_includes/: navigation.html  navigation_docs.html
docs/_layouts/: author.html  default.html  docs.html  post.html
docs/_posts/: 2020-03-18-state-of-my-study.md  2020-03-20-introduction-to-the-project.md  2022-03-22-presentation.md  2023-07-24-job-ad.md  2023-09-27-corporate-fleets.md  2024-02-06-job-ad.md
docs/_sass/: main.scss
docs/_sass/minima/: custom-styles.scss
docs/assets/css/: styles.scss
docs/assets/js/: newsletter.js
docs/docs/: contributing.md  home.md  installation.md  known_issues.md  support.md  usage.md
src/: main.py
src/data_processing_ev/: __init__.py  __main__.py
src/data_processing_ev/data_visualisation/: __init__.py  animation.py  map_calcs.py  mapping.py
src/data_processing_ev/ev_simulation/: [deprecated]_xml_splitter.py  dirty__xml_splitter.py  dirty__xml_splitter_per_taxi.py  ev_simulation.py  hull_ev_simulation.py  results_splitter.py  sumo_ev_simulation.py
src/data_processing_ev/helper_scripts/: __init__.py  energy_usage_boxplots_aggregator.py  energy_usage_boxplots_aggregator_2.py  mpl_figopen  mpl_figopen.py  power_energy_plot_extractor.py
src/data_processing_ev/results_analysis/: [deprecated]_mk_output_dir.sh  [deprecated]_ren_output_dir.sh  analysis_functions.py  ev_box_plots.py  ev_results_analysis.py  pv_results_analysis.py  results_analysis.py  wind_results_analysis.py
src/data_processing_ev/routing/: [deprecated]_duarouter.sh  fcd_conversion.py  routing.py
src/data_processing_ev/scenario_initialisation/: initialisation-instructions.md  scenario_initialisation.py
src/data_processing_ev/spatial_clustering/: __init__.py  dirty__dates_remaining.py  save_dates_remaining.py  spatial_clustering.py  spatial_filtering.py
src/data_processing_ev/temporal_clustering/: __init__.py  stop_duration_box_plots.py  stop_extraction.py  temporal_clustering.py
(+37 files in other folders)
