[metadata]
name = ev-fleet-sim
version = 1.1b1
author = Chris Abraham
author_email = chrisbrhm@gmail.com
description = This software computes the electrical energy requirements of a fleet of vehicles. It also determines how much of this energy can be offset by renewable energy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/eputs/ev-fleet-sim
project_urls =
    Bug Tracker = https://gitlab.com/eputs/ev-fleet-sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
