[metadata]
name = ev-fleet-sim
version = 1.2b1
author = Chris Abraham
author_email = chrisbrhm@gmail.com
description = This software computes the electrical energy requirements of a fleet of vehicles. It also determines how much of this energy can be offset by renewable energy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/eputs/ev-fleet-sim
project_urls =
    Bug Tracker = https://gitlab.com/eputs/ev-fleet-sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    tqdm
    matplotlib
    pandas
    hdbscan
    numpy
    scipy
    scikit-learn
    folium
    haversine
    rtree
    memory_profiler
    PyQt5
    mpl_axes_aligner
    statsmodels
    pdbpp
    area
    build
    twine

[options.packages.find]
where = src
