[metadata]
name = ev-fleet-sim
version = 1.11.8.post1
author = Chris Abraham
author_email = chrisbrhm@gmail.com
description = This software computes the electrical energy requirements of a fleet of vehicles. It also determines how much of this energy can be offset by renewable energy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ev-fleet-sim.online
project_urls =
    Source = https://gitlab.com/eputs/ev-fleet-sim
    Bug Tracker = https://gitlab.com/eputs/ev-fleet-sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    wheel
    tqdm >= 4.62.3
    matplotlib == 3.3.4
    pandas == 1.2.5
    # cython == 0.29.24
    # hdbscan == 0.8.27
    numpy >= 1.19.5
    scipy >= 1.7.1
    scikit-learn >= 1.0.1
    folium >= 0.12.1
    haversine >= 2.5.1
    rtree >= 0.9.7
    memory_profiler >= 0.58.0
    PyQt5 >= 5.15.6
    mpl_axes_aligner >= 1.3
    statsmodels >= 0.13.0
    area >= 1.1.1
    pdbpp >= 0.10.3
    build >= 0.7.0
    twine >= 3.8.0
    statsmodels >= 0.13.0
    # Shapely == 1.8.0
    pyproj == 3.2.1
    libsumo >= 1.8.0
    nautical-calculations
    geopy
    argcomplete
include_package_data=True

[options.package_data]
* = *

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ev-fleet-sim = data_processing_ev:main
    mpl-figopen = data_processing_ev.helper_scripts:mpl_figopen
